# CellPilot

./: .cursorignore  .gitignore  pyproject.toml  requirements.txt  train.py
configs/: bochemian.yaml  drfp.yaml  fp.yaml  llm_phi.yaml  pllm.yaml  pllm_phi.yaml  pllm_phi_tf.yaml
data/: tmp.py
data/datasets/supplementary/: download_chip_tsv.py  tmp.py
data/preprocessing/: DE_heart_atlas.py  chip_edges_heart.py  colocalization.py  combine_ranks.py  compare_dorothea_vs_jaccard.py  compute_jaccard.py  corr_genes_heart.py  inverse_participation_ratio.py  leave_one_out.py  tf_pairs_template.py  trn_preprocessing.py
gollum/: train.py
src/cellpilot/: __init__.py  __main__.py  cli.py  version.py
src/cellpilot/bo/: __init__.py  optimizer.py
src/cellpilot/data/: __init__.py  module.py
src/cellpilot/featurization/: __init__.py  base.py  deep.py  reaction.py  text.py
src/cellpilot/featurization/utils/: __init__.py
src/cellpilot/initialization/: __init__.py
src/cellpilot/metrics/: __init__.py
src/cellpilot/surrogate_models/: __init__.py  gp.py
src/cellpilot/utils/: __init__.py
tests/: __init__.py  test_version.py
