[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cellpilot"
version = "0.0.1"
description = "CellPilot core package"
authors = [{ name = "CellPilot" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["cellpilot*"]

[project.scripts]
# Define CLI entrypoints as needed in future, e.g.:
# cellpilot = "cellpilot.cli:main"
