[tool.uv.pip]
torch-backend = "auto"

[project]
name = "cellpilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "torch",
  "botorch",
  "transformers",
  "peft",
  "scikit-learn",
  "scikit-learn-extra",
  "pandas",
  "tqdm",
  "matplotlib",
  "wandb",
  "jsonargparse",
  "pytorch-lightning",
]



