[tool.uv.pip]
torch-backend = "auto"

[project]
name = "cellpilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "torch",
  "botorch",
  "transformers",
  "peft",
  "scikit-learn",
  "scikit-learn-extra",
  "pandas",
  "tqdm",
  "matplotlib",
  "wandb",
  "jsonargparse",
  "pytorch-lightning",
  "numpy<2",
]



[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
cellpilot-train = "cellpilot.cli:main"
